minor fixes, like the navbar works better on mobile viewport, and little imaging edits

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ a:hover {
 
 .vid {
   width: 60%;
-  margin-left: 10vw;
+  margin-left: 10px;
   margin-top: 20%;
   margin-right: 5em;
   margin-bottom: 5%;
