--- a/src/styles/MailAgent.css
+++ b/src/styles/MailAgent.css
@@ -41,8 +41,9 @@ body {
   width: 100%;
   border-radius: 5px;
   max-width: 480px;
+  min-width: 180px;
   margin-left: auto;
-  margin-right: auto;
+  /* margin-right: auto; */
   padding-top: 5px;
   padding-bottom: 5px;
   left: 0;
